[package]
name = "novel2epub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epub-builder = "0.5.0"
glob = "0.3.1"
html-builder = "0.5.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
scraper = "0.15.0"
